--- a/app/styles/markdown.scss
+++ b/app/styles/markdown.scss
@@ -76,7 +76,7 @@
   --color-prettylights-syntax-brackethighlighter-angle: #8b949e;
   --color-prettylights-syntax-sublimelinter-gutter-mark: #484f58;
   --color-prettylights-syntax-constant-other-reference-link: #a5d6ff;
-  --color-fg-default: #e6edf3;
+  --color-fg-default: #f3f3f3;
   --color-fg-muted: #848d97;
   --color-fg-subtle: #6e7681;
   --color-canvas-default: transparent;
